--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,26 @@
-version: '3.7'
+version: '3.8'
 services:
     php8-sf6:
         container_name: php8-sf6
         build: php8-sf6
         ports:
-            - "9000:8000"
+            - "80:8000"
         volumes:
             - ./project:/var/www/html
 
-    mailer:
-        image: schickling/mailcatcher
-        ports: [1025, 1080]
+    # mailer:
+    #     image: schickling/mailcatcher
+    #     ports: [1025, 1080]
 
-    database:
-        image: postgres:13-alpine
-        environment:
-            POSTGRES_DB: app
-            POSTGRES_PASSWORD: ChangeMe
-            POSTGRES_USER: symfony
+    mysql:
+        image: mysql:5.7
+        container_name: mysql57
         volumes:
-            - db-data:/var/lib/postgresql/data:rw
-        ports:
-            - "5432"
-
+            - ./data/db:/var/lib/mysql
+        environment:
+            MYSQL_DATABASE: symfony_db
+            MYSQL_USER: devuser
+            MYSQL_PASS: devpass
+            MYSQL_ROOT_PASSWORD: root
 volumes:
   db-data:
