--- a/php8-sf6/Dockerfile
+++ b/php8-sf6/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.0.13-cli
+FROM php:8.1-cli
 
 RUN apt-get update \
     &&  apt-get install -y --no-install-recommends \
@@ -12,8 +12,8 @@ RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen  \
 RUN curl -sS https://getcomposer.org/installer | php -- \
     &&  mv composer.phar /usr/local/bin/composer
 
-RUN curl -sS https://get.symfony.com/cli/installer | bash \
-    &&  mv /root/.symfony/bin/symfony /usr/local/bin
+RUN curl -1sLf 'https://dl.cloudsmith.io/public/symfony/stable/setup.deb.sh' | bash
+RUN apt install symfony-cli
 
 RUN docker-php-ext-configure \
             intl \
@@ -24,8 +24,8 @@ RUN pecl install apcu && docker-php-ext-enable apcu
 
 RUN npm install --global yarn
 
-RUN git config --global user.email "you@example.com" \
-    &&  git config --global user.name "Your Name"
+RUN git config --global user.email "tranquocbn@gmail.com" \
+    &&  git config --global user.name "Quoc Tran"
 
 CMD tail -f /dev/null
 
